# Agent_ZAI

./: .gitignore  cspell.json
Correct/: pyproject.toml
Correct/.claude/: settings.json
Correct/PRACTICA/: Guia_Completa_ACT 1.docx
Correct/PRACTICA/Programas/: babygpt.ipynb  transformersModel.ipynb
Correct/zai/: __init__.py  __main__.py  agent.py  config.py  context.py  excel.py
Correct/zai/gui/: app.py  theme.py
Correct/zai/gui/views/: chat_view.py  corrector_view.py  extractor_view.py  organizer_view.py
Correct/zai/modelo/: __init__.py  arquitectura.py  entrenador.py  inferencia.py  tokenizador.py
Correct/zai/modes/: chat.py  corrector.py  extractor.py  organizer.py
