[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zai"
version = "2.1.0"
description = "ZAI — Agente Inteligente para Zapoteco del Istmo (Diidxazá)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "customtkinter>=5.2",
    "pillow>=10.0",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zai*"]

[project.scripts]
zai-cli = "zai.__main__:main"

[project.gui-scripts]
zai = "zai.__main__:main"
